# Privacy-Preserving-ML-through-HHE

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
configs/: config.cpp
data/Harpocrates_recordingwise_ESADA_4percent_small/: 102_data.txt  106_data.txt  111_data.txt  114_data.txt  122_data.txt  123_data.txt  124_data.txt  125_data.txt  140_data.txt  143_data.txt  153_data.txt  158_data.txt  160_data.txt  165_data.txt  169_data.txt  170_data.txt  178_data.txt  179_data.txt  183_data.txt  184_data.txt  186_data.txt  187_data.txt
dummy/: analyst.py  csp.proto  csp.py  csp_pb2.py  csp_pb2_grpc.py  siesta_1_layer_ml_binary.keras  siesta_ml_binary.keras  user.py
dummy/csp/: csp.proto  csp_client.py  csp_pb2.py  csp_pb2_grpc.py  csp_server.py
gui/: analyst.py  analyst.sh  base.py  user.py
gui/utils/: __init__.py  plot_binaryoutput.py  plot_spo2.py
middleware/: Dockerfile  command.json  command.sh  storage_hook
middleware/distributed_hhe_ppml_client/cli/: __init__.py
notebooks/: SpO2_qat.ipynb
notebooks/SpO2-results/: siesta_wg_binary.keras
results/: ESADA_4percent.txt  SIESTA_4percent.txt  accuracy.ipynb  accuracy2.ipynb  accuracy3.py  binaryoutput_tree.txt  desatml2.ipynb  desatml2.py  esada_ml_binary.keras  esada_wg_binary.keras  performance.ipynb  performance.py  siesta_1_layer_wg_binary.keras
results/ESADA_4percent/: BinaryOutput_SpO2_cleaned4__esada.txt  CountOutput_SpO2_cleaned4__esada.txt
results/SIESTA_4percent/: CountOutput_SpO2_cleaned4_.txt
utils/: plot_binaryoutput.py  plot_spo2.py
(+3712 files in other folders)
