[project]
name = "privacy-preserving-ml-through-hhe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brevitas>=0.12.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "torch>=2.8.0",
]
